Fix navbar on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -131,8 +131,8 @@ th {
 }
 
 .landingMargins {
-	margin-left: 20%;
-	margin-right: 20%;
+	margin-left: 25%;
+	margin-right: 25%;
 }
 
 .text-center {
